--- a/realtime/index.html
+++ b/realtime/index.html
@@ -1,7 +1,13 @@
+<!DOCTYPE html>
+<html>
 <head>
 <title>Realtime | Give it a Try Campaign</title>
 <meta property="og:title" content="WaveVision | Realtime 1.0" />
 <meta property="og:url" content="https://bit.ly/3fHRPEh" />
 <meta property="og:image" content="https://github.com/wavevisioncloud/go/blob/master/My%20Post.png?raw=true" />
-<meta http-equiv="refresh" content="0;URL=https://bit.ly/3fHRPEh">
+<meta http-equiv="refresh" content="5;URL=https://bit.ly/3fHRPEh">
 </head>
+<body>
+
+</body>
+</html>
