--- a/realtime/index.html
+++ b/realtime/index.html
@@ -4,7 +4,7 @@
 <title>Realtime | Give it a Try Campaign</title>
 <meta property="og:title" content="WaveVision | Realtime 1.0" />
 <meta property="og:url" content="https://bit.ly/3fHRPEh" />
-<meta property="og:image" content="https://github.com/wavevisioncloud/go/blob/master/My%20Post.png?raw=true" />
+<meta property="og:image" content="https://raw.githubusercontent.com/wavevisioncloud/go/master/My%20Post.png" />
 <meta http-equiv="refresh" content="5;URL=https://bit.ly/3fHRPEh">
 </head>
 <body>
