--- a/realtime/index.html
+++ b/realtime/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Realtime | Give it a Try Campaign</title>
 <meta property="og:title" content="WaveVision | Realtime 1.0" />
-<meta property="og:url" content="https://bit.ly/3fHRPEh" />
+<meta property="og:url" content="https://go.wavevision.fr" />
 <meta property="og:image" content="https://raw.githubusercontent.com/wavevisioncloud/go/master/My%20Post.png" />
 <meta http-equiv="refresh" content="0;URL=https://bit.ly/3fHRPEh">
 </head>
