--- a/goclicktest/index.html
+++ b/goclicktest/index.html
@@ -1,1 +1,14 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Go Links | Test link</title>
+<meta property="og:title" content="Go | Links make it easier" />
+<meta property="og:url" content="https://twitter.com" />
+<meta property="og:description" content="This link is a test link that redirects to our Twitter Profile." />
+<meta property="og:image" content="https://pbs.twimg.com/profile_images/1284583494589587457/ZadFhrwl_400x400.jpg" />
+<meta http-equiv="refresh" content="0;URL=https://twitter.com/WaveVisionFR">
+</head>
+<body>
 
+</body>
+</html>
