--- a/goclicktest/index.html
+++ b/goclicktest/index.html
@@ -7,6 +7,14 @@
 <meta property="og:description" content="This link is a test link that redirects to our Twitter Profile." />
 <meta property="og:image" content="https://pbs.twimg.com/profile_images/1284583494589587457/ZadFhrwl_400x400.jpg" />
 <meta http-equiv="refresh" content="0;URL=https://twitter.com/WaveVisionFR">
+ 
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:site" content="@WaveVisionFR" />
+<meta name="twitter:creator" content="@WaveVisionFR" />
+<meta property="og:url" content="https://twitter.com" />
+<meta property="og:title" content="Go | Links make it easier" />
+<meta property="og:description" content="This link is a test link that redirects to our Twitter Profile. Wave Vision Cloud, Inc." />
+<meta property="og:image" content="https://pbs.twimg.com/profile_images/1284583494589587457/ZadFhrwl_400x400.jpg" />
 </head>
 <body>
 
