--- a/realtime/index.html
+++ b/realtime/index.html
@@ -6,6 +6,13 @@
 <meta property="og:url" content="https://go.wavevision.fr" />
 <meta property="og:image" content="https://raw.githubusercontent.com/wavevisioncloud/go/master/My%20Post.png" />
 <meta http-equiv="refresh" content="0;URL=https://bit.ly/3fHRPEh">
+  
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:site" content="@WaveVisionFR" />
+<meta name="twitter:creator" content="@WaveVisionFR" />
+<meta property="og:url" content="https://twitter.com" />
+<meta property="og:title" content="WaveVision Cloud | Realtime beta 1.0" />
+<meta property="og:image" content="https://raw.githubusercontent.com/wavevisioncloud/go/master/My%20Post.png" />
 </head>
 <body>
 
